# gradle-to-bazel

./: .gitignore
custom-classifiers/: BUILD.bazel  MODULE.bazel  maven_install.json
jackson-circular-dependency/: BUILD.bazel  MODULE.bazel  maven_install.json
jackson-circular-dependency/src/main/java/com/example/: HelloWorld.java
jackson-circular-dependency/src/test/java/com/example/: HelloWorldTest.java
main-sample/: MODULE.bazel  build.gradle  maven_install.json
main-sample/src/main/java/com/example/: HelloWorld.java
main-sample/src/test/java/com/example/: HelloWorldTest.java
okio-missing/: .bazelrc  BUILD.bazel  MODULE.bazel  maven_install.json
snapshots/: BUILD.bazel  MODULE.bazel  Makefile  maven_install.json
snapshots/gradle-test/: build.gradle
