load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")

java_library(
    name = "hello_world_lib",
    srcs = ["src/main/java/com/example/HelloWorld.java"],
    deps = [
    ],
)

java_binary(
    name = "hello_world",
    main_class = "com.example.HelloWorld",
    runtime_deps = [":hello_world_lib"],
)

java_test(
    name = "hello_world_test",
    srcs = ["src/test/java/com/example/HelloWorldTest.java"],
    test_class = "com.example.HelloWorldTest",
    use_testrunner = False,
    main_class = "com.example.HelloWorldTest",
    deps = [
        ":hello_world_lib",
    ],
    runtime_deps = [
    ],
)