module(
    name = "okio_missing",
    version = "0.0.0",
)

bazel_dep(name = "rules_java", version = "8.13.0")
bazel_dep(name = "rules_jvm_external", version = "6.6")

git_override(
    module_name = "rules_jvm_external",
    remote = "https://github.com/bazelbuild/rules_jvm_external.git",
    commit = "a88c56ef91452adcdcc7af5e95bb335b0c2d9bc8",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "test_explorer_maven",
    artifacts = [
        "org.junit.jupiter:junit-jupiter-engine:5.11.4",
        "org.junit.jupiter:junit-jupiter-api:5.11.4", 
        "org.junit.platform:junit-platform-console:1.11.4",
        "com.squareup.okhttp3:okhttp:4.12.0",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    resolver = "gradle",
    lock_file = "//:maven_install.json",
)
use_repo(maven, "test_explorer_maven")